# EPP-Final-Project

./: .gitignore  .pre-commit-config.yaml  CITATION  README.md  environment.yml  pyproject.toml  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  enhancement.md  question.md
paper/: epp_final.tex  epp_final_pres.tex  task_paper.py
src/epp_final/: __init__.py
src/epp_final/analysis/: model.py  predict.py  task_analysis.py
src/epp_final/data/: data1990.csv  wage.xlsx
src/epp_final/data_management/: __init__.py  clean_data.py  data_info.yaml  data_info1990.yaml  task_data_management.py
src/epp_final/final/: __init__.py  plot.py  task_final.py
tests/analysis/: Sample2_test.csv  test_model.py  test_predict.py
tests/data_management/: data1990_raw_test.csv  data_fixture.csv  test_clean_data.py
