[metadata]
name = epp_final
description = EPP-Final
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yudingshechu/epp_final
author = Gewei,Lindi
author_email = geweicao@126.com
license = Not open source
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: Not open source License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
project_urls =
    Changelog = https://github.com/yudingshechu/epp_final
    Documentation = https://github.com/yudingshechu/epp_final
    Github = https://github.com/yudingshechu/epp_final
    Tracker = https://github.com/yudingshechu/epp_final/issues

[options]
packages = find:
install_requires =
    pytask
python_requires = >=3.11
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[check-manifest]
ignore =
    src/epp_final/_version.py
